 - API: The new "span" mechanism allows animations when dropping a Dockable.
 - API: An empty FlapDockStation now has a preferred size of 0/0, but when the mouse is near the station its preferred size increases
 ! API: DockStation.prepareDrop and associated methods receive now a StationDropItem instead of several parameters. This allows to forward more information to these methods, and will be more backwards compatible for future changes.
 - API: Making a SplitDockStation very small, such that dividers become invalid, no longer changes the valud of dividers forever.
 - API: SplitDockStation now suppors "Span" as well.
 - Bugfix: When multiple listeners are receiving Key- and DoubleClick-Events, the the listeners further down the tree are invoked first.
 - API: New FocusHistory keeps track of the order of focused Dockables, can be accessed through DockController.getFocusHistory
 - API: CControl will transfer the focus from minimized Dockables to not minimized Dockables
 - API: CWorkingArea offers the new method "show" which show a Dockable at the "optimal spot"

[v1.1.1p7c]
 - Bugfix: Focus transfer on minimization is now forced, this prevents focus stealing when minimizing a non-focused Dockable.
 - Bugfix: Shrinking an Eclipse-Tab now keeps the action visible and clickable as long as possible. Text and icon of the tab have lesser importance than the action.

[v1.1.1p7d]
 - API: New property StackDockStation.TAB_CONFIGURATION allows to fine tune the look of tabs 

[v1.1.1p7e]
 - Bugfix: Insertion area was not always painted on a SplitDockStation
 - Bugfix: New Icons for the EclipseTheme by Nicolas Roduit. The new icons should work well with dark backgrounds.
 - Bugfix: BaseTabComponent has now its own FocusTraversalPolicy allowing the user to press "tab" and focus a component outside of the tab.
   
[Todo]
- Drop StackDockStation over Dockable and merge them